# wxwidgets-hello-world

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: App.cpp  App.h  MainWindow.cpp  MainWindow.h  Utils.cpp  Utils.h  main.cpp
tools/: apply-clang-format.sh  apply-cppcheck.sh  build-portable-linux.sh  build-portable-windows.bat
